--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="title">Tradeit.gg</div>
             <div class="toggle">
-                <div class="bg" onclick="toggle(event)">
+                <div class="bg" >
                     <div class="button"></div>
                 </div>
             </div>
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="title">Dmarket.com</div>
             <div class="toggle">
-                <div class="bg" onclick="toggle(event)">
+                <div class="bg" >
                         <div class="button"></div>
                 </div>
             </div>
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="title">Skins-table.xyz</div>
             <div class="toggle">
-                <div class="bg" onclick="toggle(event)">
+                <div class="bg" >
                     <div class="button"></div>
                 </div>
             </div>
