Added messaging between popup and background

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="popup">
-        <div class="row">
+        <div class="row" data-option="Tradeit.gg">
             <div class="title">Tradeit.gg</div>
             <div class="toggle">
                 <div class="bg" >
@@ -15,7 +15,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row" data-option="Dmarket.com">
             <div class="title">Dmarket.com</div>
             <div class="toggle">
                 <div class="bg" >
@@ -23,7 +23,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row" data-option="Skins-table.xyz">
             <div class="title">Skins-table.xyz</div>
             <div class="toggle">
                 <div class="bg" >
@@ -34,23 +34,23 @@
         <div class="list">
             <div class="list-title">Notify by:</div>
                 <div class="li">
-                    <div class="container">
+                    <label class="container">
                         <input type="radio" name="list-checks" checked>
                         <div class="text">Count change</div>
-                     </div>
+                    </label>
                 </div>
                 <div class="li">
-                    <div class="container">
+                    <label class="container">
                         <input type="radio" name="list-checks">
                         <div class="text">Items more then </div>
-                    </div>
+                    </label>
                     <input type="number" name="" id="" class="input">
                 </div>
                 <div class="li">
-                    <div class="container">
+                    <label class="container">
                         <input type="radio" name="list-checks">
                         <div class="text">Items from the list appeared:</div>
-                    </div>
+                    </label>
                     <button class="add">+</button>
                 </div>
                 <table class="table">
@@ -58,9 +58,42 @@
                         <td class="table-title">Name</td>
                     </tr>
                     <tr class="tr">
+                        <!-- wil be generated -->
                         <td class="table-item">
                             <div class="text">Desert Eagle | Urban Rubble (Minimal Wear)</div>
-                            <button class="table-btn">x</button>
+                            <button class="table-btn">Remove</button>
+                        </td>
+                        <td class="table-item">
+                            <div class="text">Desert Eagle | Urban Rubble (Minimal Wear)</div>
+                            <button class="table-btn">Remove</button>
+                        </td>
+                        <td class="table-item">
+                            <div class="text">Desert Eagle | Urban Rubble (Minimal Wear)</div>
+                            <button class="table-btn">Remove</button>
+                        </td>
+                        <td class="table-item">
+                            <div class="text">Desert Eagle | Urban Rubble (Minimal Wear)</div>
+                            <button class="table-btn">Remove</button>
+                        </td>
+                        <td class="table-item">
+                            <div class="text">Desert Eagle | Urban Rubble (Minimal Wear)</div>
+                            <button class="table-btn">Remove</button>
+                        </td>
+                        <td class="table-item">
+                            <div class="text">Desert Eagle | Urban Rubble (Minimal Wear)</div>
+                            <button class="table-btn">Remove</button>
+                        </td>
+                        <td class="table-item">
+                            <div class="text">Desert Eagle | Urban Rubble (Minimal Wear)</div>
+                            <button class="table-btn">Remove</button>
+                        </td>
+                        <td class="table-item">
+                            <div class="text">Desert Eagle | Urban Rubble (Minimal Wear)</div>
+                            <button class="table-btn">Remove</button>
+                        </td>
+                        <td class="table-item">
+                            <div class="text">Desert Eagle | Urban Rubble (Minimal Wear)</div>
+                            <button class="table-btn">Remove</button>
                         </td>
                     </tr>
                 </table>
