Added saving settings to chrome storage

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="popup">
-        <div class="row" data-option="Tradeit.gg">
+        <div class="row" data-option="tradeit.gg">
             <div class="title">Tradeit.gg</div>
             <div class="toggle">
                 <div class="bg" >
@@ -15,7 +15,7 @@
                 </div>
             </div>
         </div>
-        <div class="row" data-option="Dmarket.com">
+        <div class="row" data-option="dmarket.com">
             <div class="title">Dmarket.com</div>
             <div class="toggle">
                 <div class="bg" >
@@ -23,7 +23,7 @@
                 </div>
             </div>
         </div>
-        <div class="row" data-option="Skins-table.xyz">
+        <div class="row" data-option="skins-table.xyz">
             <div class="title">Skins-table.xyz</div>
             <div class="toggle">
                 <div class="bg" >
