Added search for items from the list

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -53,40 +53,16 @@
                     </label>
                     <button class="add">+</button>
                 </div>
+                <div class="addition">
+                    <input type="text" name="" class="input" placeholder="Past the name of the item here">
+                    <button class="addition-btn">Add</button>
+                </div>
                 <table class="table">
                     <tr class="tr">
                         <td class="table-title">Name</td>
                     </tr>
-                    <tr class="tr">
+                    <tr class="tr content">
                         <!-- wil be generated 
-                        <td class="table-item">
-                            <div class="text">Desert Eagle | Urban Rubble (Minimal Wear)</div>
-                            <button class="table-btn">Remove</button>
-                        </td>
-                        <td class="table-item">
-                            <div class="text">Desert Eagle | Urban Rubble (Minimal Wear)</div>
-                            <button class="table-btn">Remove</button>
-                        </td>
-                        <td class="table-item">
-                            <div class="text">Desert Eagle | Urban Rubble (Minimal Wear)</div>
-                            <button class="table-btn">Remove</button>
-                        </td>
-                        <td class="table-item">
-                            <div class="text">Desert Eagle | Urban Rubble (Minimal Wear)</div>
-                            <button class="table-btn">Remove</button>
-                        </td>
-                        <td class="table-item">
-                            <div class="text">Desert Eagle | Urban Rubble (Minimal Wear)</div>
-                            <button class="table-btn">Remove</button>
-                        </td>
-                        <td class="table-item">
-                            <div class="text">Desert Eagle | Urban Rubble (Minimal Wear)</div>
-                            <button class="table-btn">Remove</button>
-                        </td>
-                        <td class="table-item">
-                            <div class="text">Desert Eagle | Urban Rubble (Minimal Wear)</div>
-                            <button class="table-btn">Remove</button>
-                        </td>
                         <td class="table-item">
                             <div class="text">Desert Eagle | Urban Rubble (Minimal Wear)</div>
                             <button class="table-btn">Remove</button>
