--- a/popup/popup.html
+++ b/popup/popup.html
@@ -54,7 +54,7 @@
                     <button class="add">+</button>
                 </div>
                 <div class="addition">
-                    <input type="text" name="" class="input" placeholder="Past the name of the item here">
+                    <input type="text" name="" maxlength="70" class="input" placeholder="Paste the name of the item here">
                     <button class="addition-btn">Add</button>
                 </div>
                 <table class="table">
@@ -62,13 +62,13 @@
                         <td class="table-title">Name</td>
                     </tr>
                     <tr class="tr content">
-                        <!-- wil be generated 
-                        <td class="table-item">
-                            <div class="text">Desert Eagle | Urban Rubble (Minimal Wear)</div>
+                        <!-- Content example -->
+                        <!-- <td class="table-item">
+                            <div class="text">Item name 1</div>
                             <button class="table-btn">Remove</button>
                         </td>
                         <td class="table-item">
-                            <div class="text">Desert Eagle | Urban Rubble (Minimal Wear)</div>
+                            <div class="text">Item name 2</div>
                             <button class="table-btn">Remove</button>
                         </td>-->
                     </tr>
